--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -9,3 +9,8 @@ Neos:
     fusion:
       autoInclude:
         VIVOMEDIA.FontAwesome.Icon: true
+    userInterface:
+      translation:
+        autoInclude:
+          VIVOMEDIA.FontAwesome.Icon:
+            - 'NodeTypes/*'
