Allow emtpy values for background icon

--- a/Configuration/NodeTypes.FontAwesomeIcon.IconBackgroundMixin.yaml
+++ b/Configuration/NodeTypes.FontAwesomeIcon.IconBackgroundMixin.yaml
@@ -14,6 +14,8 @@
         reloadIfChanged: true
         inspector:
           editor: Neos.Neos/Inspector/Editors/SelectBoxEditor
+          editorOptions:
+            allowEmpty: true
           group: stacked
         values: []
     iconInversed:
