--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,13 @@
             "Neos.Neos.Ui-20190319094900",
             "Neos.Flow-20190425144900",
             "Neos.Flow-20190515215000",
-            "Neos.NodeTypes-20190917101945"
+            "Neos.NodeTypes-20190917101945",
+            "Neos.NodeTypes-20200120114136",
+            "Neos.Flow-20200813181400",
+            "Neos.Flow-20201003165200",
+            "Neos.Flow-20201109224100",
+            "Neos.Flow-20201205172733",
+            "Neos.Flow-20201207104500"
         ]
     }
 }
