--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "neos/neos": ">=5.2",
-        "composer/semver": "^1.4.0"
+        "composer/semver": "^1.4.0|^3.2.0"
     },
     "autoload": {
         "psr-4": {
